[update] Ajuste impuestos

--- a/src/app/compartidos/comprobacion-components/lista-comprobantes-carga/lista-comprobantes-carga.component.html
+++ b/src/app/compartidos/comprobacion-components/lista-comprobantes-carga/lista-comprobantes-carga.component.html
@@ -76,7 +76,7 @@
       </table>
     </div>
     <div class="row mt-2">
-      <span *ngIf="comprobante.total_comprobantes"> Mostrando {{ lista_comprobaciones.length }} de {{
+      <span *ngIf="lista_comprobaciones.length"> Mostrando {{ lista_comprobaciones.length }} de {{
         total_comprobantes }} {{ comprobante.total_comprobantes > 1? 'Comprobantes': 'Comprobante'}} </span>
     </div>
   </div>
@@ -99,6 +99,16 @@
                 </div>
               </td>
             </tr>
+
+            <tr *ngIf="comprobante.total_descuento">
+              <td class="font-weight-bold">Total descuentos (MXN)</td>
+              <td>
+                <div style="text-align: right;">
+                  {{ comprobante.total_descuento | currency: '$':'symbol':'1.2-2':'en' }}
+                </div>
+              </td>
+            </tr>
+
             <tr>
               <td class="font-weight-bold">Monto reembolsable (MXN) </td>
               <td>
@@ -141,7 +151,7 @@
 </div>
 
 <!-- Modal Conceptos Comprobantes -->
-<app-modal-conceptos-comprobantes #modalConceptos [comprobante]="comprobante"
+<app-modal-conceptos-comprobantes #modalConceptos [comprobante]="comprobante_individual"
   (onGuardarConceptos)="onActualizarComprobantes($event)" [lista_cuentas]="lista_cuentas"
   [lista_monedas]="lista_monedas" [lista_forma_pago]="lista_forma_pago" [aprobacion_parcial]="aprobacion_parcial"
   [tipo_gasto]="tipo_gasto" [identificador_corporativo]="usuario.identificador_corporativo"
