--- a/src/app/compartidos/comprobacion-components/carga-comprobante-nacional/carga-comprobante-nacional.component.html
+++ b/src/app/compartidos/comprobacion-components/carga-comprobante-nacional/carga-comprobante-nacional.component.html
@@ -119,6 +119,16 @@
             <div class="col-md-3 col-sm-4 col-xs-12">
               <button class="btn btn-primary mt-4" (click)="abrirModalAgregarAnexos()"> Anexos </button>
             </div>
+            <div class="col-md-3 col-sm-4 col-xs-12"
+              *ngIf="comprobante && comprobante.complemento.impuestosLocales && comprobante.complemento.impuestosLocales">
+              <br>
+              <p>
+                <span class="bold"> Impuestos Locales: </span>
+                <button class="btn btn-primary btn-sm" (click)="modal(comprobante.complemento.impuestosLocales)">
+                  <em class="fa fa-percent"></em>
+                </button>
+              </p>
+            </div>
           </div>
         </div>
       </div>
@@ -126,10 +136,10 @@
   </div>
   <div class="row">
     <div class="col-12">
-      <app-tabla-conceptos-form [conceptos]="comprobante.conceptos" [lista_cuentas]="lista_cuentas"
-        (onCancelar)="cancelar()" (onAgregar)="agregarConceptos($event)" [forma_pago]="this.comprobante.forma_pago"
-        [concepto_seleccionado]="concepto_seleccionado" [tipo_gasto]="tipo_gasto"
-        [porcentaje_reembolso]="porcentaje_reembolso" [monto_disponible]="monto_disponible"
+      <app-tabla-conceptos-form [impuestos]="impuestos" [conceptos]="comprobante.conceptos"
+        [lista_cuentas]="lista_cuentas" (onCancelar)="cancelar()" (onAgregar)="agregarConceptos($event)"
+        [forma_pago]="this.comprobante.forma_pago" [concepto_seleccionado]="concepto_seleccionado"
+        [tipo_gasto]="tipo_gasto" [porcentaje_reembolso]="porcentaje_reembolso" [monto_disponible]="monto_disponible"
         [tipo_cambio]="comprobante.tipoCambio">
       </app-tabla-conceptos-form>
     </div>
