--- a/src/app/compartidos/comprobacion-components/tabla-conceptos-form/tabla-conceptos-form.component.html
+++ b/src/app/compartidos/comprobacion-components/tabla-conceptos-form/tabla-conceptos-form.component.html
@@ -43,6 +43,9 @@
           <th class="text-right" scope="">
             <!-- {{ conceptos[i].importe | currency: '$':'symbol':'1.2-2':'en' }} -->
             {{ item.controls.importe.value | currency: '$':'symbol':'1.2-2':'en' }}
+
+            <p *ngIf="item.controls.descuento.value > 0" class="text-sm"> - {{item.controls.descuento.value | currency:
+              '$':'symbol':'1.2-2':'en' }} </p>
           </th>
           <th *ngIf="tipo_gasto !== 11 " scope="">
             <select2 [data]="lista_cuentas" [options]="{placeholder: 'Seleccione Concepto... '}"
