[update] Ajustes loguin Active

--- a/src/app/paginas/dynamic-login/dynamic-login/dynamic-login.component.html
+++ b/src/app/paginas/dynamic-login/dynamic-login/dynamic-login.component.html
@@ -38,6 +38,12 @@
               <span (click)="password()" class=" glyphicon glyphicon-eye-open"> <i [ngClass]="ojo"></i> </span>
             </div>
 
+            <!-- <div class="form-group">
+              <p>Acceso con ActiveDirectory</p>
+              <input id="password" type="checkbox" name="activedirectory" value="1"
+                class="form-control form-control-lg form-control-sm" [(ngModel)]="activedirectory">
+            </div> -->
+
             <div class="login-buttons">
               <button id="ingresar" type="submit" (click)="Ingresar()"
                 class="btn btn-success btn-block btn-lg aqui ingresar"
