[update] Ajustes Login Active

--- a/src/app/compartidos/comprobacion-components/lista-comprobantes-carga/lista-comprobantes-carga.component.html
+++ b/src/app/compartidos/comprobacion-components/lista-comprobantes-carga/lista-comprobantes-carga.component.html
@@ -100,14 +100,14 @@
               </td>
             </tr>
 
-            <tr *ngIf="comprobante.total_descuento">
+            <!-- <tr *ngIf="comprobante.total_descuento">
               <td class="font-weight-bold">Total descuentos (MXN)</td>
               <td>
                 <div style="text-align: right;">
                   {{ comprobante.total_descuento | currency: '$':'symbol':'1.2-2':'en' }}
                 </div>
               </td>
-            </tr>
+            </tr> -->
 
             <tr>
               <td class="font-weight-bold">Monto reembolsable (MXN) </td>
