--- a/src/app/modulos/comprobaciones-gastos/reporte-gastos/reporte-list/reporte-list.component.html
+++ b/src/app/modulos/comprobaciones-gastos/reporte-gastos/reporte-list/reporte-list.component.html
@@ -42,6 +42,12 @@
               <td>
                 <div style="white-space: nowrap">{{ item.estatus }} </div>
               </td>
+              <td>
+                <button class="btn btn-primary text-white btn ml-2" (click)="editarBorrador(item)">
+                  <span>Consultar</span>
+                </button>
+              </td>
+
             </tr>
           </tbody>
         </table>
