--- a/src/app/paginas/dynamic-login/dynamic-login/dynamic-login.component.html
+++ b/src/app/paginas/dynamic-login/dynamic-login/dynamic-login.component.html
@@ -38,11 +38,13 @@
               <span (click)="password()" class=" glyphicon glyphicon-eye-open"> <i [ngClass]="ojo"></i> </span>
             </div>
 
-            <!-- <div class="form-group">
-              <p>Acceso con ActiveDirectory</p>
-              <input id="password" type="checkbox" name="activedirectory" value="1"
-                class="form-control form-control-lg form-control-sm" [(ngModel)]="activedirectory">
-            </div> -->
+            <div class="form-group" style="display: none;">
+              <p>
+                Acceso con ActiveDirectory &nbsp;
+                <input id="password" type="checkbox" name="activedirectory" value="1" [(ngModel)]="activedirectory">
+              </p>
+
+            </div>
 
             <div class="login-buttons">
               <button id="ingresar" type="submit" (click)="Ingresar()"
@@ -87,8 +89,8 @@
     </div>
   </div>
 
-  <app-modal-roles [listaRolSucursales]="listaRolSucursales" [relacion_rol_centro_consumo]="relacion_rol_centro_consumo"
-    (limpiar_mensaje)="limpiar_mensaje()">
+  <app-modal-roles #modalRoles [listaRolSucursales]="listaRolSucursales"
+    [relacion_rol_centro_consumo]="relacion_rol_centro_consumo" (limpiar_mensaje)="limpiar_mensaje()">
   </app-modal-roles>
   <app-modal-rec-password [identificador_corporativo]="identificador_corporativo"
     [resset_password]="cambiar_pass_requerido"></app-modal-rec-password>
