[update] Active Directory

--- a/src/app/paginas/dynamic-login/dynamic-login/dynamic-login.component.html
+++ b/src/app/paginas/dynamic-login/dynamic-login/dynamic-login.component.html
@@ -38,7 +38,7 @@
               <span (click)="password()" class=" glyphicon glyphicon-eye-open"> <i [ngClass]="ojo"></i> </span>
             </div>
 
-            <div class="form-group" style="display: none;">
+            <div class="form-group">
               <p>
                 Acceso con ActiveDirectory &nbsp;
                 <input id="password" type="checkbox" name="activedirectory" value="1" [(ngModel)]="activedirectory">
