--- a/src/app/compartidos/comprobacion-components/form-comprobacion-header/form-comprobacion-header.component.html
+++ b/src/app/compartidos/comprobacion-components/form-comprobacion-header/form-comprobacion-header.component.html
@@ -26,7 +26,7 @@
 
       <div class="col-lg-3 col-md-4 col-sm-6 mt-2">
         <label for="compania">Compañía <span class="requerido">*</span></label>
-        <select class="form-control" formControlName="contribuyente" name="corporativo"
+        <select class="form-control" formControlName="contribuyente" name="corporativo" id="contribuyente"
           [(ngModel)]="header_comprobante.identificador_compania"
           (change)="onChangeContribuyente($event.target.selectedIndex)">
           <option *ngFor="let item of lista_contribuyentes" [value]="item.identificador"
