--- a/src/app/modulos/modal-suplencia-rci/modal-suplencia-rci.component.html
+++ b/src/app/modulos/modal-suplencia-rci/modal-suplencia-rci.component.html
@@ -111,7 +111,7 @@
         <button id="btn_cancelar_modal_login" type="button" class="btn btn-danger"
           (click)="closeModal()">Cancelar</button>
         <button id="btn_continuar_modal_login" [disabled]="!formulario_modal_rci.valid" type="button"
-          class="btn btn-primary" (click)="GuardarSuplencia()" [innerHTML]="txtBtnAgregar">Continuar</button>
+          class="btn btn-primary" (click)="GuardarSuplencia()" [innerHTML]="txtBtnAgregar">Guardar</button>
       </div>
     </div>
   </div>
