--- a/src/app/compartidos/comprobacion-components/form-comprobacion-header/form-comprobacion-header.component.html
+++ b/src/app/compartidos/comprobacion-components/form-comprobacion-header/form-comprobacion-header.component.html
@@ -153,7 +153,7 @@
       <button *ngIf="!numero_comprobacion" type="button" (click)="cancelarComprobacion()"
         class="btn btn-danger ml-auto mr-2">Cancelar</button>
       <button
-        *ngIf="header_comprobante!.estatus!.toLowerCase() == 'borrador' || !header_comprobante.estatus || (datos_aprobacion && datos_aprobacion.nivel_aproacion == 2 && tipo_gasto !== 11)  || (datos_aprobacion && datos_aprobacion.nivel_aproacion === 1 && tipo_gasto === 11) "
+        *ngIf=" (header_comprobante!.estatus!.toLowerCase() == 'borrador' || !header_comprobante.estatus || (datos_aprobacion && datos_aprobacion.nivel_aproacion == 2 && tipo_gasto !== 11)  || (datos_aprobacion && datos_aprobacion.nivel_aproacion === 1 && tipo_gasto === 11)) && !is_reporte "
         [disabled]="(!formulario_header.valid || numero_comprobacion) &&  !header_comprobante.id" type="submit"
         class="btn btn-primary ml-auto">{{ numero_comprobacion? "Actualizar" : "Continuar"}}</button>
     </div>
