--- a/src/app/modulos/comprobaciones-gastos/caja_chica/caja-chica-form/caja-chica-form.component.html
+++ b/src/app/modulos/comprobaciones-gastos/caja_chica/caja-chica-form/caja-chica-form.component.html
@@ -1,6 +1,6 @@
 <app-form-comprobacion-header #comprobacionHeader (onContinuar)="guardarFormHeader($event)" (onCancelar)="cancelar()"
   [numero_comprobacion]='numero_comprobacion' [comprobacion_header]="comprobacion_header" [usuario]="usuario"
-  [title]="title" [tipo_gasto]="TIPO_GASTO">
+  [title]="title" [tipo_gasto]="TIPO_GASTO" [is_reporte]='is_reporte'>
 </app-form-comprobacion-header>
 
 <!-- Carga de Documentos -->
@@ -41,7 +41,7 @@
   (onActualizarConceptosSuccess)="this.obtenerComprobacion()" (onAprobarComprobacion)="procesarAprobacion($event)"
   (onSolicitarCambiosComprobacion)="solicitarCambiosComprobacion($event)" [tipo_gasto]='TIPO_GASTO'
   [total_comprobantes]="comprobacion_header.total_comprobantes" (onRechazarComprobacion)="rechazarAprobacion($event)"
-  [aprobacion_parcial]="aprobacion_parcial" [tipo_gasto]='TIPO_GASTO' [tipo_movimiento]='6'>
+  [aprobacion_parcial]="aprobacion_parcial" [tipo_gasto]='TIPO_GASTO' [tipo_movimiento]='6' [is_reporte]='is_reporte'>
 </app-lista-comprobantes-carga>
 
 <app-loading-modal *ngIf="show_loading"></app-loading-modal>
