--- a/src/app/modulos/comprobaciones-gastos/prestaciones/prestaciones-form/prestaciones-form.component.html
+++ b/src/app/modulos/comprobaciones-gastos/prestaciones/prestaciones-form/prestaciones-form.component.html
@@ -1,6 +1,6 @@
 <app-form-comprobacion-header #comprobacionHeader (onContinuar)="guardarFormHeader($event)" (onCancelar)="cancelar()"
   [numero_comprobacion]='numero_comprobacion' [comprobacion_header]="comprobacion_header" [usuario]="usuario"
-  [title]="title" [tipo_gasto]="TIPO_GASTO">
+  [title]="title" [tipo_gasto]="TIPO_GASTO" [is_reporte]='is_reporte'>
 </app-form-comprobacion-header>
 
 <!-- Carga de Documentos -->
@@ -51,7 +51,8 @@
   (onActualizarConceptosSuccess)="this.obtenerComprobacion()" (onAprobarComprobacion)="procesarAprobacion($event)"
   (onSolicitarCambiosComprobacion)="solicitarCambiosComprobacion($event)"
   (onRechazarComprobacion)="rechazarAprobacion($event)" [aprobacion_parcial]="aprobacion_parcial"
-  [total_comprobantes]="comprobacion_header.total_comprobantes" [tipo_gasto]='TIPO_GASTO' [tipo_movimiento]='15'>
+  [total_comprobantes]="comprobacion_header.total_comprobantes" [tipo_gasto]='TIPO_GASTO' [tipo_movimiento]='15'
+  [is_reporte]='is_reporte'>
 </app-lista-comprobantes-carga>
 
 <app-loading-modal *ngIf="show_loading"></app-loading-modal>
