--- a/src/app/modulos/tipo-gasto/list-rerlaciones-rci/list-rerlaciones-rci.component.html
+++ b/src/app/modulos/tipo-gasto/list-rerlaciones-rci/list-rerlaciones-rci.component.html
@@ -32,7 +32,7 @@
             <tr class="gradeU" *ngFor="let item of lsit_relacion_gastos">
               <td>{{item.nombre}}</td>
               <td>{{item.frecuencia_fiscal}}</td>
-              <td>{{item.valor_nacional | currency: 'MXN' : 'symbol-narrow' : '2.2-2' }}</td>
+              <td>{{item.valor_nacional | currency: '$':'symbol':'1.2-2':'en' }}</td>
               <td class="centrado" style="text-align: center !important;">
                 <a class="btn btn-danger mx-2 text-white editar-sucursal"
                   (click)="eliminarRelacionTipoGasto(item.id)">Eliminar</a>
