--- a/src/app/paginas/dynamic-login/dynamic-login/dynamic-login.component.html
+++ b/src/app/paginas/dynamic-login/dynamic-login/dynamic-login.component.html
@@ -38,10 +38,11 @@
               <span (click)="password()" class=" glyphicon glyphicon-eye-open"> <i [ngClass]="ojo"></i> </span>
             </div>
 
-            <div class="form-group">
+            <div class="form-group" style="display: none;">
               <p>
                 Acceso con ActiveDirectory &nbsp;
-                <input id="password" type="checkbox" name="activedirectory" value="1" [(ngModel)]="activedirectory">
+                <input id="password" type="checkbox" checked="checked" name="activedirectory" value="1"
+                  [(ngModel)]="activedirectory">
               </p>
 
             </div>
