--- a/src/app/compartidos/modal-conceptos-comprobantes/modal-conceptos-comprobantes.component.html
+++ b/src/app/compartidos/modal-conceptos-comprobantes/modal-conceptos-comprobantes.component.html
@@ -48,10 +48,11 @@
                 <label for="">
                   Forma de Pago:
                 </label>
-                <ng-container *ngIf="!getCanEdit(); else elseTemplate1">
+                <ng-container *ngIf="(!getCanEdit() && tipo_gasto !== 11); else elseTemplate1">
                   <select class=" ml-3 d-inline-block form-control w-50 form-control w-50 "
                     [(ngModel)]="comprobante.forma_pago_id" id="tipo_comprobacion" formControlName="forma_pago_id"
-                    aria-placeholder="Seleccione tipo de comprobante" [disabled]="tipo_gasto == 11 || tipo_gasto == 2">
+                    aria-placeholder="Seleccione tipo de comprobante"
+                    [disabled]="tipo_gasto === 11 || tipo_gasto === 2">
                     <option *ngFor="let item of lista_forma_pago" [value]="item.id"
                       [attr.selected]="item.id == comprobante.forma_pago_id ? true : null"> {{ item.text }} </option>
                   </select>
@@ -65,7 +66,7 @@
                 <label for="">
                   Moneda:
                 </label>
-                <ng-container *ngIf="!getCanEdit(); else elseTemplate">
+                <ng-container *ngIf="(!getCanEdit() && tipo_gasto !== 11 ); else elseTemplate">
                   <select class=" ml-3 d-inline-block form-control w-50 form-control w-50 " id="moneda"
                     formControlName="moneda" name="moneda" [(ngModel)]="comprobante.moneda">
                     <option *ngFor="let item of lista_monedas" [value]="item.clave"
@@ -83,11 +84,19 @@
                 </label>
                 {{ comprobante.total | currency: '$':'symbol':'1.2-2':'en' }}
               </div>
+
               <div class="col-sm-6 col-md-4">
                 <label for="">
                   Monto a Reembolsar:
                 </label>
                 {{ comprobante.monto_reembolsar | currency: '$':'symbol':'1.2-2':'en' }}
+                <br>
+                <span *ngIf="tipo_gasto === 11">
+                  <label for="tipo_comprobacion">Saldo Disponible: </label> <span class="text-success"
+                    [ngClass]="{'text-danger': monto_disponible <= 0}"> {{ monto_disponible | currency:
+                    '$':'symbol':'1.2-2':'en' }}
+                  </span>
+                </span>
               </div>
               <div class="col-sm-6 col-md-4" *ngIf="comprobante.total_descuento > 0">
                 <label for="">
@@ -140,7 +149,10 @@
                           <th scope="col">Valor Unitario</th>
                           <th scope="col">Cantidad</th>
                           <th scope="col">Tipo de Cambio</th>
-                          <th scope="col">Importe Original </th>
+                          <th scope="col">
+                            <span *ngIf="tipo_gasto !== 11 "> Importe Original </span>
+                            <span *ngIf="tipo_gasto === 11 "> Importe</span>
+                          </th>
                           <th *ngIf="tipo_gasto !== 11 " style="width: 250px;" scope="col">Concepto</th>
                           <th scope="col">Monto a Reembolsar (MXN)</th>
                           <th *ngIf="comprobante.xml" scope="col">Impuestos</th>
@@ -172,7 +184,8 @@
                           </td>
                           <td class="text-right">
                             <p class="desc">
-                              {{ comprobante.conceptos[i].importe | currency: '$':'symbol':'1.2-2':'en' }}
+                              <!-- {{ comprobante.conceptos[i].importe | currency: '$':'symbol':'1.2-2':'en' }} -->
+                              {{ item.controls.importe.value | currency: '$':'symbol':'1.2-2':'en' }}
                             </p>
                             <p class="desc" *ngIf="comprobante.conceptos[i].descuento > 0" title="Descuento"
                               class="badge badge-light">
