--- a/src/app/compartidos/comprobacion-components/carga-comprobante-extranjero/carga-comprobante-extranjero.component.html
+++ b/src/app/compartidos/comprobacion-components/carga-comprobante-extranjero/carga-comprobante-extranjero.component.html
@@ -161,8 +161,8 @@
   <div class="row mt-3">
     <div class="col-md-3 ml-auto ">
       <label for="tipo_cambio">Total a Reembolsar (MXN)</label>
-      <input currencyMask [options]="{ thousands: ',', decimal: '.' }" type="text" name="tipo_cambio" id="tipo_cambio'"
-        maxlength="50" class="form-control" formControlName="total" placeholder="" disabled>
+      <input currencyMask type="text" name="tipo_cambio" id="tipo_cambio'" maxlength="50" class="form-control"
+        [(ngModel)]="total_reembolsar" [ngModelOptions]="{standalone: true}" placeholder="" disabled>
     </div>
   </div>
 </form>
