--- a/src/app/compartidos/modal-conceptos-comprobantes/modal-conceptos-comprobantes.component.html
+++ b/src/app/compartidos/modal-conceptos-comprobantes/modal-conceptos-comprobantes.component.html
@@ -233,7 +233,8 @@
                               formControlName="comprobante_fiscal" name="comprobante_fiscal">
                           </td>
                           <td class="text-center">
-                            <input type="checkbox" class="mx-auto" formControlName="aplica" name="aplica">
+                            <input type="checkbox" class="mx-auto" formControlName="aplica"
+                              (change)="calcularMontosReembolsables()" name="aplica">
                           </td>
                         </tr>
                       </tbody>
