--- a/src/app/paginas/dynamic-login/dynamic-login/dynamic-login.component.html
+++ b/src/app/paginas/dynamic-login/dynamic-login/dynamic-login.component.html
@@ -38,7 +38,7 @@
               <span (click)="password()" class=" glyphicon glyphicon-eye-open"> <i [ngClass]="ojo"></i> </span>
             </div>
 
-            <div class="form-group" *ngIf="bandera_proveedor !== 'proveedor'">
+            <div class="form-group" *ngIf="bandera_proveedor !== 'proveedor'" style="display: none;">
               <p>
                 Acceso con ActiveDirectory &nbsp;
                 <input id="password" type="checkbox" checked="checked" name="activedirectory" value="1"
