[fix] enviar solo nombre en mod usuario

--- a/src/app/modulos/usuarios/formulario-usuario-rci/formulario-usuario-rci.component.html
+++ b/src/app/modulos/usuarios/formulario-usuario-rci/formulario-usuario-rci.component.html
@@ -13,8 +13,8 @@
             <div class="form-row">
               <div class="form-group col-md-3">
                 <label>Nombre<span>*</span></label>
-                <input type="text" class="form-control" maxlength="150" name="nombre" [(ngModel)]="usuario.nombre"
-                  formControlName="nombre" readOnly />
+                <input type="text" class="form-control" maxlength="150" name="nombre"
+                  [(ngModel)]="usuario.nombre_completo" formControlName="nombre_completo" readOnly />
               </div>
               <div class="form-group col-md-3">
                 <label>Correo<span>*</span></label>
