--- a/src/app/compartidos/modal-conceptos-comprobantes/modal-conceptos-comprobantes.component.html
+++ b/src/app/compartidos/modal-conceptos-comprobantes/modal-conceptos-comprobantes.component.html
@@ -117,6 +117,13 @@
                 </select2>
               </div>
 
+              <div class="col-sm-6 col-md-4" *ngIf="comprobante.observaciones">
+                <label for="">
+                  Observación:
+                </label>
+                {{ comprobante.observaciones }}
+              </div>
+
             </div>
             <div class="row my-3">
               <div class="col text-right">
